Ignore __pycache__ files and folders from being pushed to github.

--- a/.gitignore
+++ b/.gitignore
@@ -3,4 +3,9 @@ virtual
 .vscode
 /__pycache__
 .env
+myapp/__pycache__/
+awwards/__pycache__/
+myapp/migrations/__pycache__/
+awwards/__pycache__
+
 
