--- a/requirements.txt
+++ b/requirements.txt
@@ -2,6 +2,7 @@ beautifulsoup4==4.8.0
 certifi==2019.9.11
 chardet==3.0.4
 config==0.4.2
+confusable-homoglyphs==3.2.0
 dj-config-url==0.1.1
 dj-database-url==0.5.0
 Django==2.2.5
@@ -9,6 +10,8 @@ django-bootstrap4==1.0.1
 django-crispy-forms==1.8.0
 django-heroku==0.3.1
 django-mathfilters==0.4.0
+django-registration==3.0.1
+gunicorn==19.9.0
 idna==2.8
 Pillow==6.2.0
 psycopg2==2.8.3
